--- a/DataAnnotatedModelValidations/DataAnnotatedModelValidations.csproj
+++ b/DataAnnotatedModelValidations/DataAnnotatedModelValidations.csproj
@@ -5,7 +5,16 @@
     <LangVersion>9.0</LangVersion>
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <PackageId>$(MSBuildProjectName)</PackageId>
+    <Version>1.0.0</Version>
     <Authors>Adamos Fiakkas</Authors>
+    <Description>Data Annotated Model Validation Middleware for HotChocolate</Description>
+    <Copyright>Adamos Fiakkas</Copyright>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/fiakkasa/DataAnnotatedModelValidations</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/fiakkasa/DataAnnotatedModelValidations</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
   <ItemGroup>
