--- a/DataAnnotatedModelValidationsTests/DataAnnotatedModelValidationsTests.csproj
+++ b/DataAnnotatedModelValidationsTests/DataAnnotatedModelValidationsTests.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.1" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.1" />
+    <PackageReference Include="Snapshooter.Xunit" Version="0.6.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <PrivateAssets>all</PrivateAssets>
