--- a/DataAnnotatedModelValidationsTests/DataAnnotatedModelValidationsTests.csproj
+++ b/DataAnnotatedModelValidationsTests/DataAnnotatedModelValidationsTests.csproj
@@ -20,8 +20,9 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="HotChocolate" Version="12.0.0" />
-    <PackageReference Include="HotChocolate.Data" Version="12.0.0" />
+    <PackageReference Include="HotChocolate" Version="12.0.1" />
+    <PackageReference Include="HotChocolate.AspNetCore" Version="12.0.1" />
+    <PackageReference Include="HotChocolate.Data" Version="12.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.7" />
