--- a/DataAnnotatedModelValidations/DataAnnotatedModelValidations.csproj
+++ b/DataAnnotatedModelValidations/DataAnnotatedModelValidations.csproj
@@ -7,7 +7,7 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageId>$(MSBuildProjectName)</PackageId>
-    <Version>4.0.2</Version>
+    <Version>4.1.0</Version>
     <Authors>Adamos Fiakkas</Authors>
     <Description>Data Annotated Model Validation Middleware for HotChocolate</Description>
     <Copyright>Adamos Fiakkas</Copyright>
@@ -18,8 +18,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="HotChocolate.Execution" Version="13.0.5" />
+    <PackageReference Include="HotChocolate.Execution" Version="13.5.0" />
     <PackageReference Include="Humanizer" Version="2.14.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="DataAnnotatedModelValidations.Tests" />
+  </ItemGroup>
 </Project>
