--- a/DataAnnotatedModelValidations/DataAnnotatedModelValidations.csproj
+++ b/DataAnnotatedModelValidations/DataAnnotatedModelValidations.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net7.0;net8.0</TargetFrameworks>
+    <TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageId>$(MSBuildProjectName)</PackageId>
-    <Version>5.0.0</Version>
+    <Version>5.1.0</Version>
     <Authors>Adamos Fiakkas</Authors>
     <Description>Data Annotated Model Validation Middleware for HotChocolate</Description>
     <Copyright>Adamos Fiakkas</Copyright>
