--- a/DataAnnotatedModelValidations/DataAnnotatedModelValidations.csproj
+++ b/DataAnnotatedModelValidations/DataAnnotatedModelValidations.csproj
@@ -1,27 +1,37 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
-    <Nullable>enable</Nullable>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <PackageId>$(MSBuildProjectName)</PackageId>
-    <Version>5.2.0</Version>
-    <Authors>Adamos Fiakkas</Authors>
-    <Description>Data Annotated Model Validation Middleware for HotChocolate</Description>
-    <Copyright>Adamos Fiakkas</Copyright>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageProjectUrl>https://github.com/fiakkasa/DataAnnotatedModelValidations</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/fiakkasa/DataAnnotatedModelValidations</RepositoryUrl>
-    <RepositoryType>git</RepositoryType>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
+        <Nullable>enable</Nullable>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+        <PackageId>$(MSBuildProjectName)</PackageId>
+        <Version>6.0.0-beta.1</Version>
+        <Authors>Adamos Fiakkas</Authors>
+        <Description>Data Annotated Model Validation Middleware for HotChocolate</Description>
+        <Copyright>Adamos Fiakkas</Copyright>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <PackageProjectUrl>https://github.com/fiakkasa/DataAnnotatedModelValidations</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/fiakkasa/DataAnnotatedModelValidations</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="HotChocolate.Execution" Version="13.9.0" />
-    <PackageReference Include="Humanizer" Version="2.14.1" />
-  </ItemGroup>
+    <ItemGroup>
+        <None Include="README.md" pack="true" PackagePath="."/>
+    </ItemGroup>
 
-  <ItemGroup>
-    <InternalsVisibleTo Include="DataAnnotatedModelValidations.Tests" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="HotChocolate.Execution" Version="14.0.0-rc.0"/>
+        <PackageReference Include="Humanizer" Version="2.14.1"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <InternalsVisibleTo Include="DataAnnotatedModelValidations.Tests"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Content Include="DataAnnotatedModelValidations.csproj.user"/>
+    </ItemGroup>
+
 </Project>
