--- a/DataAnnotatedModelValidations.Tests/DataAnnotatedModelValidations.Tests.csproj
+++ b/DataAnnotatedModelValidations.Tests/DataAnnotatedModelValidations.Tests.csproj
@@ -19,9 +19,9 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="HotChocolate" Version="14.0.0-rc.3"/>
-        <PackageReference Include="HotChocolate.AspNetCore" Version="14.0.0-rc.3"/>
-        <PackageReference Include="HotChocolate.Data" Version="14.0.0-rc.3"/>
+        <PackageReference Include="HotChocolate" Version="14.0.0"/>
+        <PackageReference Include="HotChocolate.AspNetCore" Version="14.0.0"/>
+        <PackageReference Include="HotChocolate.Data" Version="14.0.0"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1"/>
         <PackageReference Include="Moq" Version="4.18.4"/>
         <PackageReference Include="MSTest.TestAdapter" Version="3.6.1"/>
