--- a/DataAnnotatedModelValidations/DataAnnotatedModelValidations.csproj
+++ b/DataAnnotatedModelValidations/DataAnnotatedModelValidations.csproj
@@ -6,7 +6,7 @@
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
         <PackageId>$(MSBuildProjectName)</PackageId>
-        <Version>6.0.0-beta.1</Version>
+        <Version>6.0.0</Version>
         <Authors>Adamos Fiakkas</Authors>
         <Description>Data Annotated Model Validation Middleware for HotChocolate</Description>
         <Copyright>Adamos Fiakkas</Copyright>
@@ -22,7 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="HotChocolate.Execution" Version="14.0.0-rc.3"/>
+        <PackageReference Include="HotChocolate.Execution" Version="14.0.0"/>
         <PackageReference Include="Humanizer" Version="2.14.1"/>
     </ItemGroup>
 
