--- a/DataAnnotatedModelValidations.Tests/DataAnnotatedModelValidations.Tests.csproj
+++ b/DataAnnotatedModelValidations.Tests/DataAnnotatedModelValidations.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
     </PropertyGroup>
@@ -19,14 +19,14 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="HotChocolate" Version="14.0.0"/>
-        <PackageReference Include="HotChocolate.AspNetCore" Version="14.0.0"/>
-        <PackageReference Include="HotChocolate.Data" Version="14.0.0"/>
+        <PackageReference Include="HotChocolate" Version="14.1.0"/>
+        <PackageReference Include="HotChocolate.AspNetCore" Version="14.1.0"/>
+        <PackageReference Include="HotChocolate.Data" Version="14.1.0"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1"/>
         <PackageReference Include="Moq" Version="4.18.4"/>
-        <PackageReference Include="MSTest.TestAdapter" Version="3.6.1"/>
-        <PackageReference Include="MSTest.TestFramework" Version="3.6.1"/>
-        <PackageReference Include="NSubstitute" Version="5.1.0"/>
+        <PackageReference Include="MSTest.TestAdapter" Version="3.6.3"/>
+        <PackageReference Include="MSTest.TestFramework" Version="3.6.3"/>
+        <PackageReference Include="NSubstitute" Version="5.3.0"/>
         <PackageReference Include="Snapshooter.Xunit" Version="0.14.1"/>
         <PackageReference Include="xunit" Version="2.9.2"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2">
