--- a/DataAnnotatedModelValidations.Tests/DataAnnotatedModelValidations.Tests.csproj
+++ b/DataAnnotatedModelValidations.Tests/DataAnnotatedModelValidations.Tests.csproj
@@ -15,21 +15,21 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="coverlet.msbuild" Version="6.0.2">
+        <PackageReference Include="coverlet.msbuild" Version="6.0.4">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="HotChocolate" Version="14.2.0" />
-        <PackageReference Include="HotChocolate.AspNetCore" Version="14.2.0" />
-        <PackageReference Include="HotChocolate.Data" Version="14.2.0" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
-        <PackageReference Include="Moq" Version="4.18.4"/>
-        <PackageReference Include="MSTest.TestAdapter" Version="3.6.4" />
-        <PackageReference Include="MSTest.TestFramework" Version="3.6.4" />
+        <PackageReference Include="HotChocolate" Version="15.0.3"/>
+        <PackageReference Include="HotChocolate.AspNetCore" Version="15.0.3"/>
+        <PackageReference Include="HotChocolate.Data" Version="15.0.3"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0"/>
+        <PackageReference Include="Moq" Version="[4.18.4]"/>
+        <PackageReference Include="MSTest.TestAdapter" Version="3.7.3"/>
+        <PackageReference Include="MSTest.TestFramework" Version="3.7.3"/>
         <PackageReference Include="NSubstitute" Version="5.3.0"/>
-        <PackageReference Include="Snapshooter.Xunit" Version="0.14.1"/>
-        <PackageReference Include="xunit" Version="2.9.2"/>
-        <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2">
+        <PackageReference Include="Snapshooter.Xunit" Version="1.0.1"/>
+        <PackageReference Include="xunit" Version="2.9.3"/>
+        <PackageReference Include="xunit.runner.visualstudio" Version="3.0.2">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
